<?xml version="1.0" encoding="utf-8"?>
<com.tmd.utils.fixScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/state" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout style="@style/StateLayout">

            <TextView
                style="@style/StateTitle"
                android:text="@string/param_0" />

            <TextView
                android:id="@+id/param_0_info"
                style="@style/StateValue" />
        </LinearLayout>

        <LinearLayout style="@style/StateLayout">

            <TextView
                style="@style/StateTitle"
                android:text="@string/state_0" />

            <TextView
                android:id="@+id/state_0"
                style="@style/StateValue" />
        </LinearLayout>

        <LinearLayout style="@style/StateLayout">

            <TextView
                style="@style/StateTitle"
                android:text="@string/state_1" />

            <TextView
                android:id="@+id/state_1"
                style="@style/StateValue" />
        </LinearLayout>

        <LinearLayout style="@style/StateLayout">

            <TextView
                style="@style/StateTitle"
                android:text="@string/state_2" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/state_2"
                style="@style/StateSwitch" />
        </LinearLayout>

        <LinearLayout style="@style/StateLayout">

            <TextView
                style="@style/StateTitle"
                android:text="@string/state_3" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/state_3"
                style="@style/StateSwitch" />
        </LinearLayout>

        <LinearLayout style="@style/StateLayout">

            <TextView
                style="@style/StateTitle"
                android:text="@string/state_4" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/state_4"
                style="@style/StateSwitch" />
        </LinearLayout>

        <LinearLayout style="@style/StateLayout">

            <TextView
                style="@style/StateTitle"
                android:text="@string/state_5" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/state_5"
                style="@style/StateSwitch" />
        </LinearLayout>

        <LinearLayout style="@style/StateLayoutButton">

            <Button
                android:id="@+id/state_save"
                style="@style/StateButton"
                android:text="@string/state_save" />

            <Button
                android:id="@+id/state_def"
                style="@style/StateButton"
                android:text="@string/state_def" />

        </LinearLayout>

    </LinearLayout>
</com.tmd.utils.fixScrollView>
